--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/Image/1.jpeg
+    - assets/Image/2.jpeg
     - assets/Json/data.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
